--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "83e465f7-1844-4862-9433-155a2d464b7d",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
     "name = input('What is your name?')\n",
     "age = input('How old are you?')\n",
     "\n",
-    "print('My name is ' + f\"\\033[1m{name.upper()}\\033[0m\" + ' and I am ' f\"\\033[1m{age}\\033[0m\" + ' years old.')"
+    "print(f'My name is \\033[1m{name.upper()}\\033[0m and I am \\033[1m{age}\\033[0m years old.')"
    ]
   },
   {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "78219986-a849-4f4c-9961-1888617d3f60",
    "metadata": {},
    "outputs": [
@@ -266,14 +266,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the student's score:  %%\n"
+      "Enter the student's score:  88\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You have entered an invalid score! Please try again.\n"
+      "The student's letter grade is: A\n"
      ]
     }
    ],
@@ -281,22 +281,23 @@
     "score = input('Enter the student\\'s score: ')\n",
     "\n",
     "if score.isnumeric():\n",
-    "    if 70 <= int(score) <= 100:\n",
+    "    score = int(score)\n",
+    "    if 70 <= score <= 100:\n",
     "        print('The student\\'s letter grade is: A')\n",
     "\n",
-    "    elif 50 <= int(score) <= 69:\n",
+    "    elif 50 <= score <= 69:\n",
     "        print('The student\\'s letter grade is: B')\n",
     "\n",
-    "    elif 35 <= int(score) <= 49:\n",
+    "    elif 35 <= score <= 49:\n",
     "        print('The student\\'s letter grade is: C')\n",
     "\n",
-    "    elif 0 <= int(score) <= 34:\n",
+    "    elif 0 <= score <= 34:\n",
     "        print('The student\\'s letter grade is: Fail')\n",
     "\n",
-    "    elif int(score) < 0:\n",
+    "    elif score < 0:\n",
     "        print('You have entered an invalid score! Please try again.')\n",
     "    \n",
-    "    elif int(score) > 100:\n",
+    "    elif score > 100:\n",
     "        print('You have entered an invalid score! Please try again.')\n",
     "\n",
     "else:\n",
