ready for review again! (loops need exercise)

--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -28,6 +28,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85db0334-98da-4992-a2c3-06aab5b7ed2a",
+   "metadata": {},
+   "source": [
+    "#### Original answer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 135,
    "id": "9b213acf-154d-4c8a-b205-5f07e564c047",
@@ -60,6 +68,82 @@
     "\n",
     "for index, temperature_celsius in enumerate(temperatures_celsius):\n",
     "    print(temperature_celsius, ((py_array*(9/5)) + 32)[index])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b92a8ee0-ed4d-4bba-859a-cc01df25f189",
+   "metadata": {},
+   "source": [
+    "#### Corrected answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0cc9e9ea-f7b6-474b-a58e-d7479f8dcd5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 32.0\n",
+      "5 41.0\n",
+      "10 50.0\n",
+      "15 59.0\n",
+      "20 68.0\n",
+      "25 77.0\n",
+      "30 86.0\n",
+      "35 95.0\n",
+      "40 104.0\n",
+      "45 113.0\n",
+      "50 122.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_celsius = [\n",
+    "    0, 5, 10, 15, 20, 25,\n",
+    "    30, 35, 40, 45, 50 ]\n",
+    "\n",
+    "for index, temperature_celsius in enumerate(temperatures_celsius):\n",
+    "    print(temperature_celsius, ((temperature_celsius*(9/5)) + 32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6829c31d-a28d-4c10-b07d-67e6745d7506",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0.  32.]\n",
+      " [  5.  41.]\n",
+      " [ 10.  50.]\n",
+      " [ 15.  59.]\n",
+      " [ 20.  68.]\n",
+      " [ 25.  77.]\n",
+      " [ 30.  86.]\n",
+      " [ 35.  95.]\n",
+      " [ 40. 104.]\n",
+      " [ 45. 113.]\n",
+      " [ 50. 122.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_celsius = [\n",
+    "    0, 5, 10, 15, 20, 25,\n",
+    "    30, 35, 40, 45, 50 ]\n",
+    "\n",
+    "celsius_array = np.array(temperatures_celsius)\n",
+    "fahrenheit_array = celsius_array*(9/5) + 32\n",
+    "\n",
+    "print(np.column_stack((celsius_array, fahrenheit_array))) # Using np without using a for loop"
    ]
   },
   {
@@ -185,8 +269,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "92fe59bd-4cb4-466b-8586-4310affd91ad",
+   "metadata": {},
+   "source": [
+    "#### Original answer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 7,
    "id": "d649c356-8c96-49c8-8451-00d9aca18068",
    "metadata": {},
    "outputs": [
@@ -194,16 +286,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment  1: No. of Heads = 8\n",
-      "Experiment  2: No. of Heads = 4\n",
+      "Experiment  1: No. of Heads = 6\n",
+      "Experiment  2: No. of Heads = 5\n",
       "Experiment  3: No. of Heads = 5\n",
-      "Experiment  4: No. of Heads = 3\n",
+      "Experiment  4: No. of Heads = 2\n",
       "Experiment  5: No. of Heads = 4\n",
-      "Experiment  6: No. of Heads = 3\n",
-      "Experiment  7: No. of Heads = 8\n",
-      "Experiment  8: No. of Heads = 6\n",
-      "Experiment  9: No. of Heads = 3\n",
-      "Experiment  10: No. of Heads = 7\n"
+      "Experiment  6: No. of Heads = 7\n",
+      "Experiment  7: No. of Heads = 5\n",
+      "Experiment  8: No. of Heads = 5\n",
+      "Experiment  9: No. of Heads = 4\n",
+      "Experiment  10: No. of Heads = 4\n"
      ]
     }
    ],
@@ -220,9 +312,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c26372b5-74ed-4e07-b027-d3559adea3d0",
+   "metadata": {},
+   "source": [
+    "#### Corrected answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4ea3b640-3d2a-454a-9310-bfdc678b1947",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment  1: No. of Heads = 7\n",
+      "Experiment  2: No. of Heads = 5\n",
+      "Experiment  3: No. of Heads = 2\n",
+      "Experiment  4: No. of Heads = 7\n",
+      "Experiment  5: No. of Heads = 4\n",
+      "Experiment  6: No. of Heads = 7\n",
+      "Experiment  7: No. of Heads = 3\n",
+      "Experiment  8: No. of Heads = 4\n",
+      "Experiment  9: No. of Heads = 4\n",
+      "Experiment  10: No. of Heads = 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "outcomes = [] # make an empty list\n",
+    "\n",
+    "for _ in range(1,10+1): # loop so that experiment runs 10 times\n",
+    "    experiments = np.random.rand(10) # in each experiment, the coin is flipped 10 times\n",
+    "    heads = np.sum(experiments > 0.5) # use experiments variable so the results are from the experiments above\n",
+    "    outcomes.append(heads)\n",
+    "\n",
+    "for i, heads in enumerate(outcomes,1): # use enumerate to index the outcomes list\n",
+    "    print(f'Experiment  {i}: No. of Heads = {heads}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ea3b640-3d2a-454a-9310-bfdc678b1947",
+   "id": "009c5706-6910-4af1-a550-84c2fccfdbb7",
    "metadata": {},
    "outputs": [],
    "source": []
