READY FOR REVIEW AGAIN! (using jupyter need)

--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -34,11 +34,14 @@
    "source": [
     "![](https://upload.wikimedia.org/wikipedia/commons/f/f8/Polynomialdeg2.svg)\n",
     "\n",
+    "(_Image from the [Wikipedia page on Quadratic equations](https://en.wikipedia.org/wiki/Quadratic_equation)_)\n",
+    "\n",
     "The general form of a equation is: \n",
     "\n",
     "$$\n",
     "ax^{2} + bx + c = 0\n",
-    "$$"
+    "$$\n",
+    "\n"
    ]
   },
   {
