READY FOR REVIEW AGAIN! (OS need)

--- a/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
+++ b/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "d2e9d503-99f2-4aab-96f5-5cd5a2693655",
    "metadata": {},
    "outputs": [
@@ -1504,34 +1504,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "75101a9c-1ce1-4603-b0ac-08e5fb5d6090",
+   "execution_count": 4,
+   "id": "bb181e37-92e3-4773-902d-9d83600b3478",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File \"10-08-singapore.txt\" is already renamed.\n",
       "oct-08_singapore.txt ----> 10-08-singapore.txt\n",
-      "File \"07-10-cairo.txt\" is already renamed.\n",
-      "jul-10_cairo.txt ----> 07-10-cairo.txt\n",
-      "File \"05-15-dhaka.txt\" is already renamed.\n",
-      "may-15_dhaka.txt ----> 05-15-dhaka.txt\n",
-      "File \"05-13-cairo.txt\" is already renamed.\n",
-      "may-13_cairo.txt ----> 05-13-cairo.txt\n",
-      "File \"10-21-cairo.txt\" is already renamed.\n",
-      "oct-21_cairo.txt ----> 10-21-cairo.txt\n",
-      "File \"01-10-singapore.txt\" is already renamed.\n",
-      "jan-10_singapore.txt ----> 01-10-singapore.txt\n",
-      "File \"06-20-tokyo.txt\" is already renamed.\n",
-      "jun-20_tokyo.txt ----> 06-20-tokyo.txt\n",
-      "File \"08-06-jakarta.txt\" is already renamed.\n",
-      "aug-06_jakarta.txt ----> 08-06-jakarta.txt\n",
-      "File \"12-21-karachi.txt\" is already renamed.\n",
-      "dec-21_karachi.txt ----> 12-21-karachi.txt\n",
-      "File \"01-01-tokyo.txt\" is already renamed.\n",
-      "jan-01_tokyo.txt ----> 01-01-tokyo.txt\n"
+      "jul-10_cairo.txt ----> 10-08-singapore.txt\n",
+      "may-15_dhaka.txt ----> 10-08-singapore.txt\n",
+      "may-13_cairo.txt ----> 10-08-singapore.txt\n",
+      "oct-21_cairo.txt ----> 10-08-singapore.txt\n",
+      "jan-10_singapore.txt ----> 10-08-singapore.txt\n",
+      "jun-20_tokyo.txt ----> 10-08-singapore.txt\n",
+      "aug-06_jakarta.txt ----> 10-08-singapore.txt\n",
+      "dec-21_karachi.txt ----> 10-08-singapore.txt\n",
+      "jan-01_tokyo.txt ----> 10-08-singapore.txt\n"
      ]
     }
    ],
@@ -1541,23 +1531,8 @@
     " 'jun-20_tokyo.txt', 'aug-06_jakarta.txt', 'dec-21_karachi.txt',\n",
     " 'jan-01_tokyo.txt']\n",
     "\n",
-    "months_dict = {\n",
-    "'jan': '01', 'feb': '02', 'mar': '03',\n",
-    "'apr': '04', 'may': '05', 'jun': '06',\n",
-    "'jul': '07', 'aug': '08', 'sep': '09',\n",
-    "'oct': '10', 'nov': '11', 'dec': '12'\n",
-    "}\n",
-    "\n",
     "for original_file in original_files:\n",
-    "    month_alphabets, rest = original_file.split('-',1) \n",
-    "    date, city_extension = rest.split('_',1)\n",
-    "\n",
-    "    month_num = months_dict[month_alphabets]\n",
-    "\n",
-    "    new_file = f'{month_num}-{date}-{city_extension}'\n",
-    "\n",
-    "    rename_my_file(new_file)\n",
-    "\n",
+    "    rename_my_file(original_file)\n",
     "    print(f'{original_file} ----> {new_file}')"
    ]
   },
@@ -3350,7 +3325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "faca1e65-cc91-4105-9976-09e7d97ce796",
    "metadata": {},
    "outputs": [],
@@ -3360,7 +3335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "id": "675db147-c9b7-4901-bb68-be39c46b8c32",
    "metadata": {},
    "outputs": [],
@@ -3377,7 +3352,7 @@
     "        if city_folder.lower() in file_name: # To match the city related files to their corresponding folders\n",
     "            final_folder = os.path.join(city_folder, file_name)\n",
     "\n",
-    "            shutil.move(city_related_files, final_folder) # To move the files accordingly\n",
+    "            shutil.move(file_path, final_folder) # To move the files accordingly\n",
     "            print(f'{file_name} moved to {final_folder}')\n",
     "            \n",
     "            break # To increase efficiency and ensure that each file is only moved to their corresponding folder\n"
