--- a/5.2_functions__exercises/functions_(good)_exercises.ipynb
+++ b/5.2_functions__exercises/functions_(good)_exercises.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "id": "b2968b81-4a62-42a7-9b9e-3b1925698db5",
    "metadata": {},
    "outputs": [
@@ -196,13 +196,15 @@
        "80.6"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def convert_celsius(temperature_celsius, target_scale):\n",
+    "    if target_scale == 'Celsius':\n",
+    "        return temperature_celsius\n",
     "    if target_scale == 'Kelvin':\n",
     "        return temperature_celsius + 273.15\n",
     "    else:\n",
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "id": "4cb2dd46-9a23-4dae-a6fa-72cbf10560ac",
    "metadata": {},
    "outputs": [
@@ -231,13 +233,15 @@
        "21.11111111111111"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def convert_fahrenheit(temperature_fahrenheit, target_scale):\n",
+    "    if target_scale == 'Fahrenheit':\n",
+    "        return temperature_fahrenheit\n",
     "    if target_scale == 'Kelvin':\n",
     "        return (temperature_fahrenheit - 32) * 5/9 + 273.15\n",
     "    else:\n",
@@ -256,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 33,
    "id": "9ebf9090-b9f3-449e-bc11-407246b80888",
    "metadata": {},
    "outputs": [
@@ -273,25 +277,11 @@
     "    try: \n",
     "     \n",
     "        if source_scale == 'Celsius':\n",
-    "            if target_scale == source_scale:\n",
-    "                return temperature\n",
-    "            if target_scale == 'Kelvin':\n",
-    "                return temperature + 273.15\n",
-    "            elif target_scale == 'Fahrenheit':\n",
-    "                return temperature * (9/5) + 32\n",
-    "            else:\n",
-    "                return f'Invalid target scale'\n",
+    "            return convert_celsius(temperature, target_scale)\n",
     "    \n",
     "        elif source_scale == 'Fahrenheit':\n",
-    "            if target_scale == source_scale:\n",
-    "                return temperature\n",
-    "            if target_scale == 'Kelvin':\n",
-    "                return (temperature - 32) * 5/9 + 273.15\n",
-    "            elif target_scale == 'Celsius':\n",
-    "                return (temperature - 32) * 5/9\n",
-    "            else:\n",
-    "                return f'Invalid target scale'\n",
-    "    \n",
+    "            return convert_fahrenheit(temperature, target_scale)\n",
+    "            \n",
     "        elif source_scale == 'Kelvin':\n",
     "            if target_scale == source_scale:\n",
     "                return temperature\n",
