ready for review again! (fundamentals good exercise)

--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -119,6 +119,7 @@
    "source": [
     "name = input('What is your name?')\n",
     "age = input('How old are you?')\n",
+    "color = input('\n",
     "\n",
     "print(f'My name is \\033[1m{name.upper()}\\033[0m and I am \\033[1m{age}\\033[0m years old.')"
    ]
@@ -224,7 +225,7 @@
    ],
    "source": [
     "fruit1 = 'Apple'\n",
-    "priceA = 0.99\n",
+    "priceA = 0.99 # They already are floats so you do not need to cast them as floats\n",
     "\n",
     "fruit2 = 'Banana'\n",
     "priceB = 0.59\n",
@@ -259,21 +260,21 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "78219986-a849-4f4c-9961-1888617d3f60",
+   "id": "10351f2c-cf13-492e-92c4-3cc97fd8a082",
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the student's score:  88\n"
+      "Enter the student's score:  -888\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The student's letter grade is: A\n"
+      "You did not enter an integer score!\n"
      ]
     }
    ],
@@ -294,14 +295,56 @@
     "    elif 0 <= score <= 34:\n",
     "        print('The student\\'s letter grade is: Fail')\n",
     "\n",
-    "    elif score < 0:\n",
-    "        print('You have entered an invalid score! Please try again.')\n",
-    "    \n",
-    "    elif score > 100:\n",
-    "        print('You have entered an invalid score! Please try again.')\n",
+    "    else:\n",
+    "        print('Please enter an integer score between 0 and 100!')\n",
     "\n",
     "else:\n",
-    "    print('You have entered an invalid score! Please try again.')"
+    "    print('You did not enter an integer score!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "28faa852-f756-4e47-9f71-eb77769b0ad8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the student's score:  -7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter an integer score between 0 and 100!\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = input('Enter the student\\'s score: ')\n",
+    "\n",
+    "if score.isnumeric():\n",
+    "    score = int(score)\n",
+    "    if 70 <= score <= 100:\n",
+    "        print('The student\\'s letter grade is: A')\n",
+    "\n",
+    "    elif 50 <= score <= 69:\n",
+    "        print('The student\\'s letter grade is: B')\n",
+    "\n",
+    "    elif 35 <= score <= 49:\n",
+    "        print('The student\\'s letter grade is: C')\n",
+    "\n",
+    "    elif 0 <= score <= 34:\n",
+    "        print('The student\\'s letter grade is: Fail')\n",
+    "\n",
+    "    else:\n",
+    "        print('Please enter an integer score between 0 and 100!')\n",
+    "\n",
+    "else:\n",
+    "    print('Please enter an integer score between 0 and 100!')"
    ]
   },
   {
