ready for review, again! (OS need exercise)

--- a/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
+++ b/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bb181e37-92e3-4773-902d-9d83600b3478",
    "metadata": {},
    "outputs": [
@@ -1513,15 +1513,15 @@
      "output_type": "stream",
      "text": [
       "oct-08_singapore.txt ----> 10-08-singapore.txt\n",
-      "jul-10_cairo.txt ----> 10-08-singapore.txt\n",
-      "may-15_dhaka.txt ----> 10-08-singapore.txt\n",
-      "may-13_cairo.txt ----> 10-08-singapore.txt\n",
-      "oct-21_cairo.txt ----> 10-08-singapore.txt\n",
-      "jan-10_singapore.txt ----> 10-08-singapore.txt\n",
-      "jun-20_tokyo.txt ----> 10-08-singapore.txt\n",
-      "aug-06_jakarta.txt ----> 10-08-singapore.txt\n",
-      "dec-21_karachi.txt ----> 10-08-singapore.txt\n",
-      "jan-01_tokyo.txt ----> 10-08-singapore.txt\n"
+      "jul-10_cairo.txt ----> 07-10-cairo.txt\n",
+      "may-15_dhaka.txt ----> 05-15-dhaka.txt\n",
+      "may-13_cairo.txt ----> 05-13-cairo.txt\n",
+      "oct-21_cairo.txt ----> 10-21-cairo.txt\n",
+      "jan-10_singapore.txt ----> 01-10-singapore.txt\n",
+      "jun-20_tokyo.txt ----> 06-20-tokyo.txt\n",
+      "aug-06_jakarta.txt ----> 08-06-jakarta.txt\n",
+      "dec-21_karachi.txt ----> 12-21-karachi.txt\n",
+      "jan-01_tokyo.txt ----> 01-01-tokyo.txt\n"
      ]
     }
    ],
@@ -1532,7 +1532,7 @@
     " 'jan-01_tokyo.txt']\n",
     "\n",
     "for original_file in original_files:\n",
-    "    rename_my_file(original_file)\n",
+    "    new_file = rename_my_file(original_file)\n",
     "    print(f'{original_file} ----> {new_file}')"
    ]
   },
