ready for review again! (functions good)

--- a/5.2_functions__exercises/functions_(good)_exercises.ipynb
+++ b/5.2_functions__exercises/functions_(good)_exercises.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "b2968b81-4a62-42a7-9b9e-3b1925698db5",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "80.6"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "4cb2dd46-9a23-4dae-a6fa-72cbf10560ac",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "21.11111111111111"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "9ebf9090-b9f3-449e-bc11-407246b80888",
    "metadata": {},
    "outputs": [
@@ -268,14 +268,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "323.15\n"
+      "354.14\n"
      ]
     }
    ],
    "source": [
     "def convert_temperature(temperature, source_scale, target_scale):\n",
     "    try: \n",
-    "     \n",
+    "        temperature = float(temperature)\n",
     "        if source_scale == 'Celsius':\n",
     "            return convert_celsius(temperature, target_scale)\n",
     "    \n",
@@ -295,12 +295,19 @@
     "        else:\n",
     "            return f'Invalid source scale'\n",
     "\n",
-    "    except: \n",
-    "        temperature = str(temperature)\n",
+    "    except ValueError:\n",
     "        return f'Please enter a valid numerical value of temperature'\n",
     "\n",
-    "print(convert_temperature(50, 'Celsius', 'Kelvin'))"
+    "print(convert_temperature('80.99', 'Celsius', 'Kelvin'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b11be9e7-44f3-4409-a13b-61c7c34728d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
